Proof of Concept of new gunzip/gunzipOne impl
Needs more testing, review, and work:

1.  Update the test suite
2.  Research the issue of concatinating zlib streams
3.  Review various semantic considerations, especially in
    relation to the unix command "gunzip"

But, it works for me

--- a/io-streams.cabal
+++ b/io-streams.cabal
@@ -128,6 +128,7 @@ Library
                      time               >= 1.2   && <1.7,
                      transformers       >= 0.2   && <0.6,
                      vector             >= 0.7   && <0.12,
+                     zlib               >= 0.6   && <0.7,
                      zlib-bindings      >= 0.1   && <0.2
 
   if impl(ghc >= 7.2)
